<resources>
    <string name="app_name">GradeProf</string>
    <string name="action_settings">Settings</string>

    <string name="zdawalnosc">Jak bardzo trzeba się napocić, aby zaliczyć przedmiot. Wystarczy chodzić na zajęcia i promiennie się uśmiechnąć (5 pkt.) czy trzeba sprzedać duszę diabłu a obie nerki ukraińskiej mafii medycznej (0 pkt.)?</string>
    <string name="dostepnosc">Prowadzący praktycznie nocuje na uczelni, gotowy przyjąć głodnych konsultacji studentów o każdej porze dnia i nocy (5pkt.), czy może raczej przypomina kometę Halleya i na uczelni pojawia się na krótką chwilę co 75 lat (0 pkt.)?</string>
    <string name="merytoryka">Czas na zajęciach mija Ci błyskawicznie a po powrocie z uczelni rzucasz się do książek, żeby jeszcze trochę poczytać w temacie (5 pkt.) czy mozolnie odliczasz kolejne nanosekundy dzielące Cię od upragnionego końca (0 pkt.)?</string>

    <string name="testProfName">mgr Marian Kowalski</string>
    <string name="testProfInfo">LUBIE PLACKI !!!</string>
    <string name="testProfDate">24.10.2019</string>
    <string name="testProfZ">4.7</string>
    <string name="testProfD">3.395</string>
    <string name="testProfM">2.1</string>


    <string name="tPN1">dr hab. Lech Roch Pawlak</string>
    <string name="TPI1">Nie lubiem pladzkuf.</string>
    <string name="TPDAT1">28.08.9999</string>
    <string name="PTZ1">1.0</string>
    <string name="TPD1">4</string>
    <string name="TPM1">3.1</string>

    <string name="tPN2">prof. Adam Cienki</string>
    <string name="TPI2">Poprzez rozważania na temat etymologii egzystencjalnej placków jestem w stanie stwiedzić iż skłaniam się ku możliwości albowiem posiadam pewną zażyłość względem placków jednakże konwencjonalną conajwyżej.</string>
    <string name="TPDAT2">01.01.0000</string>
    <string name="PTZ2">5</string>
    <string name="TPD2">5</string>
    <string name="TPM2">5</string>

    <string name="ON1">Malkontent</string>
    <string name="OT1">Fantastyczny prowadzący, dzięki niemu zostałem lekarzem.</string>
    <string name="OU1">215</string>

    <string name="ON2">Spadochroniarz</string>
    <string name="OT2">Super prowadzący, tak mi się podoba, że trzeci raz chodzę na przedmiot!!!</string>
    <string name="OU2">382</string>




</resources>

